# statement-wrapped

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  main.py
app/core/: config.py  dependencies.py
app/models/: __init__.py  base.py  category.py  statement.py  transaction.py
app/parsers/: __init__.py  apple_card.py  boa.py  chase.py  utils.py  wells_fargo.py
app/schemas/: analysis.py  health.py  ingest.py  statements.py  transactions.py
app/services/: cache.py  categorization.py  normalization.py  summary.py
backend/: alembic.ini  database.py  main.py  requirements.txt
backend/alembic/: env.py
backend/models/: __init__.py  category.py  statement.py  transaction.py
backend/parsers/: __init__.py  chase.py
backend/routers/: ingest.py  transactions.py
backend/services/: normalizer.py
backend/tests/: test_chase_parser.py
docs/screenshots/: README.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
scripts/: benchmark.py
tests/: conftest.py  test_apple_card_parser.py  test_boa_parser.py  test_categorization.py  test_chase_parser.py  test_fixture_parsing.py  test_health.py  test_wells_fargo_parser.py
tests/fixtures/: apple_card_sample.csv  boa_sample.csv  chase_sample.csv  sample_apple_card.csv  sample_boa.csv  (+3 more)
(+27 files in other folders)
